# AccountingWeb-k3s

./: .dockerignore  .gitignore  Dockerfile  README.md  deployment.yaml  django-ingress.yaml  django-service.yaml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: build-and-deploy.yml  docker-image.yml
AccountingWeb/: admin.py  asgi.py  calculations.py  crypto.py  models.py  settings.py  urls.py  utils.py  views.py  wsgi.py
AccountingWeb/migrations/: 0001_initial.py  0002_alter_transaction_credit_alter_transaction_debit.py  0003_alter_transaction_credit_alter_transaction_debit.py  0004_alter_transaction_credit_alter_transaction_debit.py  0005_adopt_existing_owner_columns.py  0006_account_total_value_ct_account_total_value_iv_and_more.py  0007_drop_plain_total_value.py  0008_drop_plain_txn_fields.py
k8s/: 10-deployment.yaml  30-django-ingress.yaml
nginx/: default.conf
static/: manifest.json
static/html5up-stellar/assets/css/: main.css
static/html5up-stellar/assets/js/: menu.js
staticfiles/html5up-stellar/: elements.html  index.html
templates/: balance_sheet.html  income_statement.html  index.html  new_transaction.html  summary.html  transaction_history.html
templates/registration/: login.html
