[project]
name = "accountingweb"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "asgiref==3.7.2",
    "cffi==2.0.0",
    "cryptography==46.0.2",
    "decouple==0.0.7",
    "Django==5.0.3",
    "gunicorn==20.1.0",
    "mysqlclient==2.2.4",
    "numpy==2.1.2",
    "pandas==2.2.3",
    "pycparser==2.23",
    "python-dateutil==2.9.0.post0",
    "python-decouple==3.8",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "setuptools==73.0.1",
    "six==1.16.0",
    "sqlparse==0.4.4",
    "tzdata==2024.2"
]
